[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"
authors = ["Julian Eager <eagr@tutanota.com>"]
description = "write your chronicle from command line"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["logging", "timestamped", "event"]
readme = "README.md"
repository = "https://github.com/eagr/chronicle"
include = [
    "src/**/*",
    "README.md",
    "LICENSE-*",
]

[lib]
name = "pre"
path = "src/pre/lib.rs"

[[bin]]
name = "chron"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2.8", features = ["cargo", "derive"] }
home = "0.5"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
toml = "0.5"
